# ros-gazebo-quadcopter

./: README.md
workspace/: proj2.sh  proj2_init.sh  teleop_hector.sh  world.sh
workspace/src/ee4308/ee4308_bringup/: CMakeLists.txt  package.xml
workspace/src/ee4308/ee4308_bringup/launch/: project2_init.launch  project2_main.launch
workspace/src/ee4308/ee4308_bringup/msg/: EE4308MsgMaster.msg  EE4308MsgMotion.msg
workspace/src/ee4308/ee4308_bringup/rviz/: proj2.rviz
workspace/src/ee4308/ee4308_bringup/scripts/: teleop_hector.py  teleop_turtle.py
workspace/src/ee4308/ee4308_bringup/urdf/: turtlebot3_burger.gazebo.xacro  turtlebot3_burger.urdf.xacro
workspace/src/ee4308/ee4308_hector/: CMakeLists.txt  package.xml
workspace/src/ee4308/ee4308_hector/launch/: project2_run.launch
workspace/src/ee4308/ee4308_hector/scripts/: alt_noise.txt  hector_constants.py  hector_master.py  hector_motion.py  hector_move.py  imu_noise.txt
workspace/src/ee4308/ee4308_turtle/: CMakeLists.txt  package.xml
workspace/src/ee4308/ee4308_turtle/launch/: project2_run.launch
workspace/src/ee4308/ee4308_turtle/scripts/: line_of_sight.py  path_planners.py  turtle_constants.py  turtle_mapper.py  turtle_master.py  turtle_motion.py  turtle_move.py
workspace/worlds/: world2020B.sh  world2020B.world  world2021.sh  world2021.world
